--- a/ListItApp/Base.lproj/Main.storyboard
+++ b/ListItApp/Base.lproj/Main.storyboard
@@ -1,24 +1,171 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jTr-Us-2l6">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Proxima Nova Light.otf">
+            <string>ProximaNova-Light</string>
+        </array>
+        <array key="Proxima Nova Regular.otf">
+            <string>ProximaNova-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--List It-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="BYZ-38-t0r" customClass="MainVC" customModule="ListItApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="vDz-KZ-Kay">
+                                <rect key="frame" x="6" y="72" width="363" height="29"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="42x-Rr-qSA"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Newest"/>
+                                    <segment title="Price"/>
+                                    <segment title="Title"/>
+                                </segments>
+                                <color key="tintColor" red="0.9959825873374939" green="0.99621325731277466" blue="0.99187678098678589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4nF-fl-n6r">
+                                <rect key="frame" x="7" y="108" width="361" height="559"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="102" id="XaI-zN-Vtu">
+                                        <rect key="frame" x="0.0" y="28" width="361" height="102"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XaI-zN-Vtu" id="7xo-j7-POb">
+                                            <rect key="frame" x="0.0" y="0.0" width="361" height="101.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kl5-Xj-P52">
+                                                    <rect key="frame" x="1" y="6" width="359" height="89.5"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Zrzut ekranu 2018-01-31 o 16.12.27" translatesAutoresizingMaskIntoConstraints="NO" id="4GH-C9-zp0">
+                                                            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="90" id="1tF-4v-WOR"/>
+                                                                <constraint firstAttribute="width" constant="90" id="N4C-hf-s1a"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apple AirPods" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7en-rP-OCV">
+                                                            <rect key="frame" x="98" y="14" width="221" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="21" id="G8y-fT-p2Z"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="ProximaNova-Regular" family="Proxima Nova" pointSize="17"/>
+                                                            <color key="textColor" red="0.9959825873374939" green="0.99621325731277466" blue="0.99187678098678589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price: 700 PLN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Io-dk-5EP">
+                                                            <rect key="frame" x="98" y="35" width="221" height="14"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="14" id="sb5-oe-t8K"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="ProximaNova-Light" family="Proxima Nova" pointSize="12"/>
+                                                            <color key="textColor" red="0.9959825873374939" green="0.99621325731277466" blue="0.99187678098678589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wireless. Effortless. Magical. Just take them out and they’re ready to use with all your devices. " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QtJ-gd-6Rv">
+                                                            <rect key="frame" x="98" y="53" width="221" height="36.5"/>
+                                                            <fontDescription key="fontDescription" name="ProximaNova-Light" family="Proxima Nova" pointSize="10"/>
+                                                            <color key="textColor" red="0.9959825873374939" green="0.99621325731277466" blue="0.99187678098678589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.098039215690000001" green="0.098039215690000001" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="QtJ-gd-6Rv" firstAttribute="top" secondItem="5Io-dk-5EP" secondAttribute="bottom" constant="4" id="37U-eK-ElC"/>
+                                                        <constraint firstItem="QtJ-gd-6Rv" firstAttribute="leading" secondItem="4GH-C9-zp0" secondAttribute="trailing" constant="8" id="ANx-Rb-xB7"/>
+                                                        <constraint firstAttribute="bottom" secondItem="QtJ-gd-6Rv" secondAttribute="bottom" id="Am7-85-bJ3"/>
+                                                        <constraint firstItem="4GH-C9-zp0" firstAttribute="leading" secondItem="kl5-Xj-P52" secondAttribute="leading" id="DF0-HU-Gee"/>
+                                                        <constraint firstItem="5Io-dk-5EP" firstAttribute="top" secondItem="7en-rP-OCV" secondAttribute="bottom" id="Nxd-Rw-jsk"/>
+                                                        <constraint firstItem="7en-rP-OCV" firstAttribute="leading" secondItem="4GH-C9-zp0" secondAttribute="trailing" constant="8" id="T0d-74-5Bj"/>
+                                                        <constraint firstAttribute="bottom" secondItem="4GH-C9-zp0" secondAttribute="bottom" id="XEh-W4-hPT"/>
+                                                        <constraint firstItem="4GH-C9-zp0" firstAttribute="top" secondItem="kl5-Xj-P52" secondAttribute="top" id="ZsU-Kq-Bas"/>
+                                                        <constraint firstAttribute="trailing" secondItem="7en-rP-OCV" secondAttribute="trailing" constant="40" id="gbs-Yz-LeA"/>
+                                                        <constraint firstItem="5Io-dk-5EP" firstAttribute="leading" secondItem="4GH-C9-zp0" secondAttribute="trailing" constant="8" id="kyS-GH-7fe"/>
+                                                        <constraint firstItem="7en-rP-OCV" firstAttribute="top" secondItem="kl5-Xj-P52" secondAttribute="top" constant="14" id="ngq-Lc-RbV"/>
+                                                        <constraint firstAttribute="trailing" secondItem="5Io-dk-5EP" secondAttribute="trailing" constant="40" id="qOh-Fe-dX2"/>
+                                                        <constraint firstAttribute="trailing" secondItem="QtJ-gd-6Rv" secondAttribute="trailing" constant="40" id="vBo-ON-PID"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="materialDesign" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.098039215690000001" green="0.098039215690000001" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="kl5-Xj-P52" firstAttribute="top" secondItem="7xo-j7-POb" secondAttribute="top" constant="6" id="Mkd-RV-nj4"/>
+                                                <constraint firstAttribute="trailing" secondItem="kl5-Xj-P52" secondAttribute="trailing" constant="1" id="mYG-Cr-06F"/>
+                                                <constraint firstAttribute="bottom" secondItem="kl5-Xj-P52" secondAttribute="bottom" constant="6" id="rBj-xo-dhJ"/>
+                                                <constraint firstItem="kl5-Xj-P52" firstAttribute="leading" secondItem="7xo-j7-POb" secondAttribute="leading" constant="1" id="sx0-Ek-kBW"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.098039215690000001" green="0.098039215690000001" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.098039215690000001" green="0.098039215690000001" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="4nF-fl-n6r" firstAttribute="top" secondItem="vDz-KZ-Kay" secondAttribute="bottom" constant="8" id="0AC-F2-5Ua"/>
+                            <constraint firstItem="4nF-fl-n6r" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="7" id="Gza-bT-Db3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4nF-fl-n6r" secondAttribute="trailing" constant="7" id="O1e-Sh-7gQ"/>
+                            <constraint firstItem="4nF-fl-n6r" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Vnm-sw-3eI"/>
+                            <constraint firstItem="vDz-KZ-Kay" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="6" id="aI9-Jh-rEZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vDz-KZ-Kay" secondAttribute="trailing" constant="6" id="eqc-6e-wx8"/>
+                            <constraint firstItem="vDz-KZ-Kay" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="y8n-e3-teY"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="List It" id="fpz-wr-kV0">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Smi-2s-5Rr">
+                            <color key="tintColor" red="0.9959825873374939" green="0.99621325731277466" blue="0.99187678098678589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="476" y="133.5832083958021"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="mrR-Ws-GdS">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jTr-Us-2l6" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eVT-sR-prr">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.098039215690000001" green="0.098039215690000001" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.9959825873374939" green="0.99621325731277466" blue="0.99187678098678589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="QEK-al-PdE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NQ4-e4-hrI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-386" y="93"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Zrzut ekranu 2018-01-31 o 16.12.27" width="1110" height="1076"/>
+    </resources>
 </document>
