--- a/ListItApp/Base.lproj/Main.storyboard
+++ b/ListItApp/Base.lproj/Main.storyboard
@@ -41,6 +41,9 @@
                                     <segment title="Title"/>
                                 </segments>
                                 <color key="tintColor" red="0.9959825873374939" green="0.99621325731277466" blue="0.99187678098678589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="segmentChange:" destination="BYZ-38-t0r" eventType="valueChanged" id="zTj-CS-piw"/>
+                                </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="104" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4nF-fl-n6r">
                                 <rect key="frame" x="7" y="108" width="400" height="628"/>
